--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <allure.version>2.24.0</allure.version>
+    <aspectj.version>1.9.22</aspectj.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -82,6 +83,11 @@
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-testng</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.22</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -104,6 +110,7 @@
             <!--suppress UnresolvedMavenProperty -->
             <suiteXmlFile>src/test/resources/testng/${suite}.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <argLine> -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" </argLine>
         </configuration>
       </plugin>
     </plugins>
